# tap-dynamodb

./: data.json  nekt.config.json  pyproject.toml
tap_dynamodb/: dynamodb_connector.py  schema_helper.py  streams.py  tap.py
tap_dynamodb/connectors/: aws_boto_connector.py
