[tool.poetry]
name = "tap-dynamodb"
version = "0.5.0"
description = "`tap-dynamodb` is a Singer tap for DynamoDB, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "DynamoDB",
]
license = "Apache-2.0"
packages = [
    { include = "tap_dynamodb" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
boto3 = "~=1.35.35"
boto3-stubs = {extras = ["dynamodb", "sts"], version = "~=1.35.35"}
fs-s3fs = { version = "~=1.1.1", optional = true }
genson = "~=1.3.0"
orjson = "~=3.10.5"
nekt-singer-sdk = {git = "https://github.com/nektcom/singer-sdk.git", rev = "v0.3.0"}
aws-assume-role-lib = "^2.10.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.5.4"
moto = ">=5.0.10"
mypy = ">=1.11.2"
pytest = ">=8.2.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "genson.*",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",  # Missing docstring in public package
    "F401",  # Imported but unused; consider removing, adding to `__all__`, or using a redundant alias
]

[tool.coverage]
source = ["tap_dynamodb/"]
omit = ["*/.tox/*", "*/test/*"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dynamodb = 'tap_dynamodb.tap:TapDynamoDB.cli'

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore.auth", # https://github.com/boto/boto3/issues/3889
]
