[project]
name = "nekt-tap-dynamodb"
version = "0.5.0"
description = "`tap-dynamodb` is a Singer tap for DynamoDB, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Pat Nadolny" }]
keywords = [
    "ELT",
    "DynamoDB",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "nekt-singer-sdk @ git+https://github.com/nektcom/singer-sdk.git@v0.3.5",
    "boto3>=1.37.12,<2.0.0",
    "boto3-stubs[dynamodb,sts]~=1.35.35",
    "genson~=1.3.0",
    "orjson~=3.10.5",
    "aws-assume-role-lib>=2.10.0,<3.0.0",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
tap-dynamodb = 'tap_dynamodb.tap:TapDynamoDB.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "coverage>=7.5.4",
    "moto>=5.0.10",
    "pytest>=8.2.2",
]
typing = [
    "mypy>=1.11.2",
]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tap_dynamodb"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "genson.*",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",  # Missing docstring in public package
    "F401",  # Imported but unused; consider removing, adding to `__all__`, or using a redundant alias
]

[tool.coverage.run]
source = ["tap_dynamodb/"]
omit = ["*/.tox/*", "*/test/*"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore.auth", # https://github.com/boto/boto3/issues/3889
]
